--- a/src/main/resources/messages_ar_AR.properties
+++ b/src/main/resources/messages_ar_AR.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown إلى PDF
 home.MarkdownToPDF.desc=يحول أي ملف Markdown إلى PDF
 MarkdownToPDF.tags=لغة الترميز,محتوى الويب,تحويل,تحويل
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=الحصول على جميع المعلومات عن PDF
 home.getPdfInfo.desc=يجمع أي وكل المعلومات الممكنة عن ملفات PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=تحويل
 MarkdownToPDF.help=العمل قيد التقدم
 MarkdownToPDF.credit=يستخدم WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=تحويل إلى PDF
 compress.title=ضغط
 compress.header=ضغط ملف PDF
 compress.credit=تستخدم هذه الخدمة qpdf لضغط / تحسين PDF.
-compress.selectText.1=الوضع اليدوي - من 1 إلى 4
+compress.selectText.1=الوضع اليدوي - من 1 إلى 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=مستوى التحسين:
 compress.selectText.3=4 (رهيب للصور النصية)
