--- a/src/main/resources/messages_az_AZ.properties
+++ b/src/main/resources/messages_az_AZ.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown-dan PDF-ə
 home.MarkdownToPDF.desc=Hər hansı Markdown faylını PDF-ə çevirir
 MarkdownToPDF.tags=işarələmə,web-məzmun,dəyişmə,çevirmə
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=PDF-in Bütün Məlumatları
 home.getPdfInfo.desc=PDF barədə mümkün olan bütün məlumatları əldə edir
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Çevir
 MarkdownToPDF.help=İş davam edir
 MarkdownToPDF.credit=WeasyPrint İstifadə Edir
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=PDF-ə Çevir
 compress.title=Sıxışdır
 compress.header=PDF-i Sıxışdır
 compress.credit=Bu servis PDF sıxışdırılması/Optimizasiyası üçün Ghostscript istifadə edir.
-compress.selectText.1=Manual Mod - 1-dən 4-ə
+compress.selectText.1=Manual Mod - 1-dən 5-ə
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Optimizasiya səviyyəsi:
 compress.selectText.3=4 (Mətn şəkilləri üçün yaxşı deyil)
