--- a/src/main/resources/messages_bg_BG.properties
+++ b/src/main/resources/messages_bg_BG.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown към PDF
 home.MarkdownToPDF.desc=Преобразува всеки Markdown файл към PDF
 MarkdownToPDF.tags=маркиране,уеб-съдържание,трансформация,преобразуване
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Вземете ЦЯЛАТА информация от PDF
 home.getPdfInfo.desc=Взима всяка възможна информация от PDF файлове
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Преобразуване
 MarkdownToPDF.help=Работата е в ход
 MarkdownToPDF.credit=Използва WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Преобразуване към PDF
 compress.title=Компресиране
 compress.header=Компресиране на PDF
 compress.credit=Тази услуга използва qpdf за PDF компресиране/оптимизиране.
-compress.selectText.1=Ръчен режим - от 1 до 4
+compress.selectText.1=Ръчен режим - от 1 до 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Ниво на оптимизация:
 compress.selectText.3=4 (Ужасно за текстови изображения)
