--- a/src/main/resources/messages_cs_CZ.properties
+++ b/src/main/resources/messages_cs_CZ.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown na PDF
 home.MarkdownToPDF.desc=Převádí libovolný soubor Markdown na PDF
 MarkdownToPDF.tags=markup,obsah-webu,transformace,konvertovat
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Získat VŠECHNY informace o PDF
 home.getPdfInfo.desc=Získání všech možných informací o PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Převést
 MarkdownToPDF.help=Práce v průběhu
 MarkdownToPDF.credit=Využívá WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Převést na PDF
 compress.title=Komprese
 compress.header=Komprimovat PDF
 compress.credit=Tato služba používá qpdf pro kompresi/optimalizaci PDF.
-compress.selectText.1=Ruční režim - Od 1 do 4
+compress.selectText.1=Ruční režim - Od 1 do 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Úroveň optimalizace:
 compress.selectText.3=4 (Hrozné pro textové obrázky)
