--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown a PDF
 home.MarkdownToPDF.desc=Convierte cualquier archivo Markdown a PDF
 MarkdownToPDF.tags=margen,contenido web,transformación,convertir
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Obtener toda la información en PDF
 home.getPdfInfo.desc=Obtiene toda la información posible de archivos PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Convertir
 MarkdownToPDF.help=Tarea en proceso
 MarkdownToPDF.credit=Usa WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Convertir a PDF
 compress.title=Comprimir
 compress.header=Comprimir PDF
 compress.credit=Este servicio utiliza qpdf para compresión/optimización de PDF
-compress.selectText.1=Modo manual - De 1 a 4
+compress.selectText.1=Modo manual - De 1 a 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Nivel de optimización:
 compress.selectText.3=4 (Terrible para imágenes de texto)
