--- a/src/main/resources/messages_eu_ES.properties
+++ b/src/main/resources/messages_eu_ES.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown PDF-ra
 home.MarkdownToPDF.desc=Bihurtu Markdown fitxategi guztiak PDF
 MarkdownToPDF.tags=markup,web-content,transformation,convert
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Lortu informazio guztia PDF-tik
 home.getPdfInfo.desc=Eskuratu PDF fitxategiko Informazio guztia
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Bihurtu
 MarkdownToPDF.help=Lanean
 MarkdownToPDF.credit=WeasyPrint darabil
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=PDF bihurtu
 compress.title=Konprimatu
 compress.header=PDFa konprimatu
 compress.credit=Zerbitzu honek qpdf erabiltzen du PDFak komprimatzeko/optimizatzeko
-compress.selectText.1=Eskuz 1etik 4ra
+compress.selectText.1=Eskuz 1etik 5ra
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Optimizazio maila:
 compress.selectText.3=4 (Izugarria testu-irudietarako)
