--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown en PDF
 home.MarkdownToPDF.desc=Convertissez n'importe quel fichier Markdown en PDF.
 MarkdownToPDF.tags=markdown,markup,contenu Web,transformation,convert
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Récupérer les informations
 home.getPdfInfo.desc=Récupérez toutes les informations possibles sur un PDF.
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Convertir
 MarkdownToPDF.help=(Travail en cours).
 MarkdownToPDF.credit=Utilise WeasyPrint.
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Convertir
 compress.title=Compresser un PDF
 compress.header=Compresser un PDF (lorsque c'est possible!)
 compress.credit=Ce service utilise qpdf pour la compression et l'optimisation des PDF.
-compress.selectText.1=Mode manuel – de 1 à 4
+compress.selectText.1=Mode manuel – de 1 à 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Niveau d'optimisation
 compress.selectText.3=4 (terrible pour les images textuelles)
