--- a/src/main/resources/messages_ga_IE.properties
+++ b/src/main/resources/messages_ga_IE.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Marcáil síos go PDF
 home.MarkdownToPDF.desc=Tiontaíonn aon chomhad Markdown go PDF
 MarkdownToPDF.tags=marcáil, ábhar gréasáin, claochlú, tiontú
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Faigh GACH Eolas ar PDF
 home.getPdfInfo.desc=Grab aon fhaisnéis agus is féidir ar PDFs
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Tiontaigh
 MarkdownToPDF.help=Obair idir lámha
 MarkdownToPDF.credit=Úsáideann WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Tiontaigh go PDF
 compress.title=Comhbhrúigh
 compress.header=Comhbhrúigh PDF
 compress.credit=Úsáideann an tseirbhís seo qpdf le haghaidh Comhbhrú/Optimization PDF.
-compress.selectText.1=Mód Láimhe - Ó 1 go 4
+compress.selectText.1=Mód Láimhe - Ó 1 go 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Leibhéal optamaithe:
 compress.selectText.3=4 (Uafásach le haghaidh íomhánna téacs)
