--- a/src/main/resources/messages_hr_HR.properties
+++ b/src/main/resources/messages_hr_HR.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown u PDF
 home.MarkdownToPDF.desc=Pretvara bilo koju Markdown datoteku u PDF
 MarkdownToPDF.tags=oznake,web-sadržaj,transformacija,konvertiranje
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Dohvati SVE informacije o PDF-u
 home.getPdfInfo.desc=Dohvaća sve moguće informacije o PDF-ovima
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Pretvori
 MarkdownToPDF.help=Rad u toku
 MarkdownToPDF.credit=Koristi WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Pretvori u PDF
 compress.title=Komprimirajte
 compress.header=Komprimirajte PDF
 compress.credit=Ova usluga koristi qpdf za komprimiranje / optimizaciju PDF-a.
-compress.selectText.1=Ručni režim - Od 1 do 4
+compress.selectText.1=Ručni režim - Od 1 do 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Nivo optimizacije:
 compress.selectText.3=4 (Užasno za tekstualne slike)
