--- a/src/main/resources/messages_id_ID.properties
+++ b/src/main/resources/messages_id_ID.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Penurunan harga ke PDF
 home.MarkdownToPDF.desc=Mengonversi berkas Markdown apa pun ke PDF
 MarkdownToPDF.tags=markup, konten web, transformasi, konversi
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Dapatkan Semua Info tentang PDF
 home.getPdfInfo.desc=Mengambil setiap dan semua informasi yang mungkin ada pada PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Konversi
 MarkdownToPDF.help=Pekerjaan sedang berlangsung
 MarkdownToPDF.credit=Menggunakan WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Konversi ke PDF
 compress.title=Kompres
 compress.header=Kompres PDF
 compress.credit=Layanan ini menggunakan qpdf untuk Kompresi/Optimalisasi PDF.
-compress.selectText.1=Mode Manual - Dari 1 hingga 4
+compress.selectText.1=Mode Manual - Dari 1 hingga 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Tingkat Optimalisasi:
 compress.selectText.3=4 (Buruk untuk gambar teks)
