--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=MarkdownをPDFに変換
 home.MarkdownToPDF.desc=あらゆるMarkdownファイルをPDFに変換します。
 MarkdownToPDF.tags=markup,web-content,transformation,convert
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=PDFのすべての情報を入手
 home.getPdfInfo.desc=PDFのあらゆる情報を取得します。
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=変換
 MarkdownToPDF.help=処理中
 MarkdownToPDF.credit=WeasyPrintを使用
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=PDFを変換
 compress.title=圧縮
 compress.header=PDFを圧縮
 compress.credit=本サービスはPDFの圧縮/最適化にqpdfを使用しています。
-compress.selectText.1=手動モード -  1 から 4
+compress.selectText.1=手動モード -  1 から 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=品質レベル:
 compress.selectText.3=4 (テキスト画像は最悪)
