--- a/src/main/resources/messages_no_NB.properties
+++ b/src/main/resources/messages_no_NB.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown til PDF
 home.MarkdownToPDF.desc=Konverter hvilken som helst Markdown-fil til PDF
 MarkdownToPDF.tags=markup,web-innhold,transformasjon,konverter
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Få ALL informasjon om PDF
 home.getPdfInfo.desc=Fanger opp all tilgjengelig informasjon om PDF-er
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Konverter
 MarkdownToPDF.help=Arbeid pågår
 MarkdownToPDF.credit=Bruker WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Konverter til PDF
 compress.title=Komprimer
 compress.header=Komprimer PDF
 compress.credit=Denne tjenesten bruker qpdf for PDF-komprimering/optimisering.
-compress.selectText.1=Manuell modus - Fra 1 til 4
+compress.selectText.1=Manuell modus - Fra 1 til 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Optimeringsnivå:
 compress.selectText.3=4 (Dårlig for tekstbilder)
