--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown para PDF
 home.MarkdownToPDF.desc=Converte qualquer arquivo Markdown para PDF.
 MarkdownToPDF.tags=marcação,conteúdo-web,transformação,converter
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Obter Informações de um PDF
 home.getPdfInfo.desc=Obtém informações (metadata) de um PDF.
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Converter
 MarkdownToPDF.help=Em desenvolvimento.
 MarkdownToPDF.credit=Utiliza o WeasyPrint.
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Converter para PDF
 compress.title=Comprimir
 compress.header=Comprimir
 compress.credit=Este serviço usa o Qpdf para compressão/otimização de PDF.
-compress.selectText.1=Modo Manual - 1 (Menos) a 9 (Mais)
+compress.selectText.1=Modo Manual - De 1 a 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Nível de Otimização:
 compress.selectText.3=4 (Pior para imagens de texto)
