--- a/src/main/resources/messages_ro_RO.properties
+++ b/src/main/resources/messages_ro_RO.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown în PDF
 home.MarkdownToPDF.desc=Convertește orice fișier Markdown în PDF
 MarkdownToPDF.tags=markup,conținut-web,transformare,convertește
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Obține TOATE Informațiile despre PDF
 home.getPdfInfo.desc=Extrage orice și toate informațiile posibile despre PDF-uri
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Convertește
 MarkdownToPDF.help=Lucrare în curs
 MarkdownToPDF.credit=Folosește WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,12 +941,12 @@ fileToPDF.submit=Convertiți în PDF
 compress.title=Comprimare
 compress.header=Comprimare PDF
 compress.credit=Acest serviciu utilizează qpdf pentru comprimarea/optimizarea PDF-urilor.
-compress.selectText.1=Nivel de optimizare:
+compress.selectText.1=Modul manual - de la 1 la 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
-compress.selectText.2=0 (Fără optimizare)
-compress.selectText.3=1 (Implicit, optimizare fără pierdere)
-compress.selectText.4=2 (Optimizare cu pierdere)
-compress.selectText.5=3 (Optimizare cu pierdere, mai agresivă)
+compress.selectText.2=Nivel de optimizare:
+compress.selectText.3=4 (Îngrozitor pentru imaginile text)
+compress.selectText.4=Mod automat - ajustează automat calitatea pentru a aduce PDF-ul la dimensiunea exactă
+compress.selectText.5=Dimensiunea PDF așteptată (de ex. 25MB, 10.8MB, 25KB)
 compress.submit=Comprimare
 
 
