--- a/src/main/resources/messages_sk_SK.properties
+++ b/src/main/resources/messages_sk_SK.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown do PDF
 home.MarkdownToPDF.desc=Konvertuje akýkoľvek Markdown súbor do PDF
 MarkdownToPDF.tags=markup, webový obsah, transformácia, konvertovať
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Získať všetky informácie o PDF
 home.getPdfInfo.desc=Získava všetky dostupné informácie o PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Konvertovať
 MarkdownToPDF.help=Práca prebieha
 MarkdownToPDF.credit=Používa WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Konvertovať do PDF
 compress.title=Komprimovať
 compress.header=Komprimovať PDF
 compress.credit=Táto služba používa qpdf pre kompresiu/optimalizáciu PDF.
-compress.selectText.1=Manuálny režim - Od 1 do 4
+compress.selectText.1=Manuálny režim - Od 1 do 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Úroveň optimalizácie:
 compress.selectText.3=4 (Hrozné pre textové obrázky)
