--- a/src/main/resources/messages_sv_SE.properties
+++ b/src/main/resources/messages_sv_SE.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown till PDF
 home.MarkdownToPDF.desc=Konverterar valfri Markdown-fil till PDF
 MarkdownToPDF.tags=markup,webbinnehåll,transformation,konvertera
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Hämta ALL information om PDF
 home.getPdfInfo.desc=Hämtar all möjlig information om PDF:er
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Konvertera
 MarkdownToPDF.help=Pågående arbete
 MarkdownToPDF.credit=Använder WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Konvertera till PDF
 compress.title=Komprimera
 compress.header=Komprimera PDF
 compress.credit=Denna tjänst använder qpdf för PDF-komprimering/optimering.
-compress.selectText.1=Manuellt läge - Från 1 till 4
+compress.selectText.1=Manuellt läge - Från 1 till 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Optimeringsnivå:
 compress.selectText.3=4 (Fruktansvärt för textbilder)
