--- a/src/main/resources/messages_tr_TR.properties
+++ b/src/main/resources/messages_tr_TR.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown'dan PDF'e
 home.MarkdownToPDF.desc=Herhangi bir Markdown dosyasını PDF'e dönüştürür
 MarkdownToPDF.tags=biçimlendirme,web-içeriği,dönüşüm,dönüştür
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=PDF Hakkında TÜM Bilgiyi Al
 home.getPdfInfo.desc=PDF'ler hakkında mümkün olan her türlü bilgiyi toplar
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Dönüştür
 MarkdownToPDF.help=Devam eden iş
 MarkdownToPDF.credit=WeasyPrint Kullanıyor
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=PDF'e Dönüştür
 compress.title=Sıkıştır
 compress.header=PDF'i Sıkıştır
 compress.credit=Bu hizmet PDF Sıkıştırma/Optimizasyonu için qpdf kullanır.
-compress.selectText.1=Manuel Mod - 1'den 4'e
+compress.selectText.1=Manuel Mod - 1'den 5'e
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Optimizasyon seviyesi:
 compress.selectText.3=4 (Metin resimleri için hiç uygun değil)
