--- a/src/main/resources/messages_vi_VN.properties
+++ b/src/main/resources/messages_vi_VN.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown sang PDF
 home.MarkdownToPDF.desc=Chuyển đổi bất kỳ tệp Markdown nào thành PDF
 MarkdownToPDF.tags=đánh dấu,nội dung web,chuyển đổi,chuyển
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Lấy TẤT CẢ thông tin về PDF
 home.getPdfInfo.desc=Lấy bất kỳ và tất cả thông tin có thể về PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Chuyển đổi
 MarkdownToPDF.help=Đang trong quá trình phát triển
 MarkdownToPDF.credit=Sử dụng WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Chuyển đổi sang PDF
 compress.title=Nén
 compress.header=Nén PDF
 compress.credit=Dịch vụ này sử dụng qpdf để Nén/Tối ưu hóa PDF.
-compress.selectText.1=Chế độ thủ công - Từ 1 đến 4
+compress.selectText.1=Chế độ thủ công - Từ 1 đến 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Mức độ tối ưu hóa:
 compress.selectText.3=4 (Tệ cho hình ảnh văn bản)
