--- a/src/main/resources/messages_ca_CA.properties
+++ b/src/main/resources/messages_ca_CA.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown a PDF
 home.MarkdownToPDF.desc=Converteix qualsevol fitxer Markdown a PDF
 MarkdownToPDF.tags=markup,web-content,transformation,convert
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Obteniu Tota la Informació sobre el PDF
 home.getPdfInfo.desc=Recupera tota la informació possible sobre els PDFs
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Convert
 MarkdownToPDF.help=Work in progress
 MarkdownToPDF.credit=Uses WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Converteix a PDF
 compress.title=Comprimir
 compress.header=Comprimir PDF
 compress.credit=Aquest servei utilitza qpdf per a la compressió/optimització de PDF.
-compress.selectText.1=Mode manual: de l'1 al 4
+compress.selectText.1=Mode manual: de l'1 al 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Nivell d'optimització:
 compress.selectText.3=4 (terrible per a imatges de text)
