--- a/src/main/resources/messages_fa_IR.properties
+++ b/src/main/resources/messages_fa_IR.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=مارک‌داون به PDF
 home.MarkdownToPDF.desc=تبدیل هر فایل مارک‌داون به PDF
 MarkdownToPDF.tags=مارک‌آپ،محتوای وب،تبدیل،تغییر
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=دریافت تمام اطلاعات در مورد PDF
 home.getPdfInfo.desc=گرفتن هر اطلاعات ممکن در مورد PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=تبدیل
 MarkdownToPDF.help=در حال پیشرفت
 MarkdownToPDF.credit=از WeasyPrint استفاده می‌کند
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=تبدیل به PDF
 compress.title=فشرده‌سازی
 compress.header=فشرده‌سازی PDF
 compress.credit=این سرویس از qpdf برای فشرده‌سازی / بهینه‌سازی PDF استفاده می‌کند.
-compress.selectText.1=حالت دستی - از ۱ تا ۴
+compress.selectText.1=حالت دستی - از 1 تا 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=سطح بهینه‌سازی:
 compress.selectText.3=۴ (خیلی بد برای تصاویر متنی)
