--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown in PDF
 home.MarkdownToPDF.desc=Converte qualsiasi file Markdown in PDF
 MarkdownToPDF.tags=markup,contenuto web,trasformazione,conversione
 
+home.PDFToMarkdown.title=PDF in Markdown
+home.PDFToMarkdown.desc=Converte qualsiasi PDF in Markdown
+PDFToMarkdown.tags=markup,contenuto-web,trasformazione,convertire,md
 
 home.getPdfInfo.title=Ottieni TUTTE le informazioni in PDF
 home.getPdfInfo.desc=Raccogli tutte le informazioni possibili sui PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Converti
 MarkdownToPDF.help=Conversione in corso
 MarkdownToPDF.credit=Utilizza WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF in Markdown
+PDFToMarkdown.header=PDF in Markdown
+PDFToMarkdown.submit=Converti
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Converti in PDF
 compress.title=Comprimi
 compress.header=Comprimi PDF
 compress.credit=Questo servizio utilizza qpdf per la compressione/ottimizzazione dei PDF.
-compress.selectText.1=Modalità manuale - Da 1 a 4
+compress.selectText.1=Modalità manuale - Da 1 a 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Livello di ottimizzazione:
 compress.selectText.3=4 (Terribile per le immagini di testo)
