--- a/src/main/resources/messages_nl_NL.properties
+++ b/src/main/resources/messages_nl_NL.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown naar PDF
 home.MarkdownToPDF.desc=Zet Markdown-bestand om naar PDF
 MarkdownToPDF.tags=markup,web-inhoud,transformatie,omzetten
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Haal ALLE informatie op over PDF
 home.getPdfInfo.desc=Haalt alle mogelijke informatie op van PDF's
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Converteren
 MarkdownToPDF.help=In ontwikkeling
 MarkdownToPDF.credit=Gebruikt WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Omzetten naar PDF
 compress.title=Comprimeren
 compress.header=PDF comprimeren
 compress.credit=Deze functie gebruikt qpdf voor PDF Compressie/Optimalisatie.
-compress.selectText.1=Handmatige modus - Van 1 tot 4
+compress.selectText.1=Handmatige modus - Van 1 tot 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Optimalisatieniveau:
 compress.selectText.3=4 (Verschrikkelijk voor tekstafbeeldingen)
