--- a/src/main/resources/messages_th_TH.properties
+++ b/src/main/resources/messages_th_TH.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown เป็น PDF
 home.MarkdownToPDF.desc=แปลงไฟล์ Markdown เป็น PDF
 MarkdownToPDF.tags=มาร์กอัป, เนื้อหาเว็บ, การแปลง, การแปลง
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=รับข้อมูลทั้งหมดเกี่ยวกับ PDF
 home.getPdfInfo.desc=รับข้อมูลที่เป็นไปได้ทั้งหมดเกี่ยวกับ PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=แปลง
 MarkdownToPDF.help=กำลังดำเนินการ
 MarkdownToPDF.credit=ใช้ WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=แปลงเป็น PDF
 compress.title=บีบอัด
 compress.header=บีบอัด PDF
 compress.credit=บริการนี้ใช้ qpdf สำหรับการบีบอัด/การเพิ่มประสิทธิภาพ PDF
-compress.selectText.1=โหมดแมนนวล - จาก 1 ถึง 4
+compress.selectText.1=โหมดแมนนวล - จาก 1 ถึง 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=ระดับการเพิ่มประสิทธิภาพ:
 compress.selectText.3=4 (ไม่ดีสำหรับภาพข้อความ)
