--- a/src/main/resources/messages_uk_UA.properties
+++ b/src/main/resources/messages_uk_UA.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown у PDF
 home.MarkdownToPDF.desc=Конвертує будь-який файл Markdown у PDF
 MarkdownToPDF.tags=markup,web-content,transformation,convert
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Отримати ВСЮ інформацію у форматі PDF
 home.getPdfInfo.desc=Збирає будь-яку можливу інформацію у PDF-файлах.
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Конвертувати
 MarkdownToPDF.help=Робота в процесі
 MarkdownToPDF.credit=Використовує WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Перетворити у PDF
 compress.title=Стиснути
 compress.header=Стиснути PDF
 compress.credit=Ця служба використовує qpdf для стиснення/оптимізації PDF.
-compress.selectText.1=Ручний режим - від 1 до 4
+compress.selectText.1=Ручний режим - від 1 до 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Рівень оптимізації:
 compress.selectText.3=4 (Жахливо для текстових зображень)
