--- a/src/main/resources/messages_zh_CN.properties
+++ b/src/main/resources/messages_zh_CN.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown 转 PDF
 home.MarkdownToPDF.desc=将任何 Markdown 文件转换为 PDF
 MarkdownToPDF.tags=标记、网页内容、转换、转换
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=获取 PDF 的所有信息
 home.getPdfInfo.desc=获取 PDF 的所有可能的信息
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=转换
 MarkdownToPDF.help=正在努力中
 MarkdownToPDF.credit=此服务使用 WeasyPrint 进行文件转换。
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=转换为 PDF
 compress.title=压缩
 compress.header=压缩 PDF
 compress.credit=此服务使用qpdf进行 PDF 压缩/优化。
-compress.selectText.1=手动模式 - 从 1 到 4
+compress.selectText.1=手动模式 - 从 1 到 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=优化级别：
 compress.selectText.3=4（文本图像很糟糕）
